# LLM_Insurance_Product_Comparison

./: README.md  default.sqlite  pyproject.toml
LAB-COMPETITIVE-ANALYSIS/: pyproject.toml
LAB-COMPETITIVE-ANALYSIS/.viz/: session_store.db  stats.json
LAB-COMPETITIVE-ANALYSIS/conf/: README.md
LAB-COMPETITIVE-ANALYSIS/conf/base/: catalog.yml  parameters.yml  parameters_dummy.yml
LAB-COMPETITIVE-ANALYSIS/data/: categories_definitions.txt  classification_prompt_v2.txt  extract_full_details_prompt_v2.txt  filter_prompt_v2.txt  product_pages_summary.csv
LAB-COMPETITIVE-ANALYSIS/data/09_final_excel/: comparison_cluster_1.xlsx  comparison_cluster_10.xlsx  comparison_cluster_100.xlsx  comparison_cluster_101.xlsx  comparison_cluster_102.xlsx  comparison_cluster_103.xlsx  comparison_cluster_104.xlsx  comparison_cluster_105.xlsx  comparison_cluster_106.xlsx  comparison_cluster_107.xlsx  comparison_cluster_108.xlsx  comparison_cluster_109.xlsx  comparison_cluster_11.xlsx  comparison_cluster_110.xlsx  comparison_cluster_111.xlsx  comparison_cluster_112.xlsx  comparison_cluster_113.xlsx  comparison_cluster_114.xlsx  comparison_cluster_115.xlsx  comparison_cluster_116.xlsx  comparison_cluster_117.xlsx  comparison_cluster_118.xlsx  comparison_cluster_119.xlsx  comparison_cluster_12.xlsx  comparison_cluster_120.xlsx  comparison_cluster_121.xlsx  comparison_cluster_122.xlsx  comparison_cluster_123.xlsx  comparison_cluster_124.xlsx  comparison_cluster_125.xlsx  comparison_cluster_126.xlsx  comparison_cluster_127.xlsx  comparison_cluster_128.xlsx  comparison_cluster_129.xlsx  comparison_cluster_13.xlsx  comparison_cluster_130.xlsx  comparison_cluster_131.xlsx  comparison_cluster_132.xlsx  comparison_cluster_133.xlsx  comparison_cluster_134.xlsx  (+388 more)
LAB-COMPETITIVE-ANALYSIS/data/4_extracted_product_details/: axa  huk-coburg  report_full_details_v2_arag.json  report_full_details_v2_axa.json  report_full_details_v2_barmenia.json  report_full_details_v2_dkv.json  report_full_details_v2_ergo.json  report_full_details_v2_generali.json  report_full_details_v2_huk-coburg.json  report_full_details_v2_r+v.json  report_full_details_v2_sdk.json  report_full_details_v2_signal_iduna_group.json
LAB-COMPETITIVE-ANALYSIS/data/5_classified_product_details/: report_full_details_v2_axa_classified.json  report_full_details_v2_barmenia_classified.json  report_full_details_v2_ergo_classified.json  report_full_details_v2_generali_classified.json  report_full_details_v2_huk-coburg_classified.json  report_full_details_v2_sdk_classified.json  v2_arag.json  v2_dkv.json  v2_ergo.json  v2_sdk.json
LAB-COMPETITIVE-ANALYSIS/data/6_product_comparisons_markdowns/: bauleistungsversicherung.md  berufsunfähigkeitsversicherung.md  betriebsunterbrechungsversicherung.md  comparison_cluster_1.md  comparison_cluster_13.md  comparison_cluster_14.md  comparison_cluster_15.md  (+36 more)
LAB-COMPETITIVE-ANALYSIS/lab_competitive_analysis/: __init__.py
LAB-COMPETITIVE-ANALYSIS/notebooks/: default.sqlite
(+4328 files in other folders)
